fix: add spacing between dl items when rendered without dividing lines

--- a/src/components/Common/UI/DescriptionList/DescriptionList.module.scss
+++ b/src/components/Common/UI/DescriptionList/DescriptionList.module.scss
@@ -1,6 +1,10 @@
 .root {
   width: 100%;
 
+  .item:not(:last-child) {
+    margin-bottom: toRem(16);
+  }
+
   dt {
     font-weight: var(--g-fontWeightMedium);
     color: var(--g-colorBodyContent);
@@ -17,6 +21,10 @@
     justify-content: space-between;
     align-items: baseline;
     gap: toRem(16);
+
+    &:not(:last-child) {
+      margin-bottom: toRem(16);
+    }
 
     dt {
       flex-shrink: 0;
